# hyrule-web

./: .gitattributes  .gitignore  .pr_agent.toml  .prettierignore  .stylelintrc.json  Dockerfile  README.md  app_patch.py  eslint.config.js  links_patch.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy-validation.yml  deploy.yml  pr-agent.yml  request-promotion.yml  semgrep.yml
frontend/src/: cmdk.ts  domain.test.ts  domain.ts  globals.d.ts  ip-check.test.ts  ip-check.ts  main.ts  nav.test.ts  nav.ts  order.ts  payment-evm.test.ts  payment-evm.ts  payment-native.test.ts  payment-native.ts  payment-solana.test.ts  payment-solana.ts  payment.ts  secret-copy.ts  status.test.ts  status.ts  toolbox.ts  types.ts  wallet-auth.test.ts  wallet-auth.ts  walletconnect.ts  x402.test.ts  x402.ts
hyrule_web/: app.py  catalog.py  config.py  journeys.py  seo.py  tool_pages.py
hyrule_web/static/: cmdk.js  payment-evm.js  payment-native.js  payment-svm.js  payment.js  site.webmanifest  (+1 more)
tests/: conftest.py  test_admin_dashboard.py  test_agentic_copy.py  test_auth.py  test_block_g.py  test_campaign.py  test_config.py  test_domains.py  test_fetch_api.py  test_html_first.py  test_icons.py  test_intent_native.py  test_ip_check.py  test_mobile_nav.py  test_overhaul.py  test_pages.py  test_partials.py  test_payments_networks.py  test_performance.py  test_proxy.py  test_review.py  test_review_chain_selector.py  test_review_quote.py  test_runtime_pill.py  test_seo.py  test_seo_routes.py  test_service_status.py  test_status.py  test_tool_catalog.py  test_tool_pages.py  test_vite_asset.py
(+43 files in other folders)
